--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,20 @@
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <script src="/scripts/app.js"></script>
+  <ui-view></ui-view>
   <!-- Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-<!-- AngularFire -->
-    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
- <!-- Firebase --> 
+  
+  <!-- AngularUI Router -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+  
+
+  <!-- Firebase --> 
     <script src="https://www.gstatic.com/firebasejs/3.7.8/firebase.js"></script>
+  
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.0.1/angularfire.min.js"></script>
+  
     <script>
   // Initialize Firebase
     var config = {
@@ -24,7 +31,11 @@
       messagingSenderId: "1009801049955"
   };
   firebase.initializeApp(config);
-</script>
+    </script>
+    <script src="/scripts/app.js"></script>
+    <script src="/scripts/services/Room.js"></script>
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/RoomCtrl.js"></script>
 </body>
 
 </html>
