--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,9 @@
   <!-- AngularUI Router -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
   
+  <!-- AngularUI Bootstrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
+
 
   <!-- Firebase --> 
     <script src="https://www.gstatic.com/firebasejs/3.7.8/firebase.js"></script>
@@ -35,6 +38,8 @@
     <script src="/scripts/app.js"></script>
     <script src="/scripts/services/Room.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/ModalCtrl.js"></script>
+    <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
     <script src="/scripts/controllers/RoomCtrl.js"></script>
 </body>
 
