--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
     <script src="/scripts/controllers/HomeCtrl.js"></script>
     <script src="/scripts/controllers/ModalCtrl.js"></script>
     <script src="/scripts/controllers/ModalInstanceCtrl.js"></script>
+    <script src="/scripts/controllers/UserInstanceCtrl.js"></script>
     <script src="/scripts/controllers/RoomCtrl.js"></script>
 </body>
 
